[package]
name = "signin"
version = "0.1.0"
authors = ["Norm O <normo.pub@gmail.com>"]
edition = "2021"
description = "Parse and validate third party jwt token with jsonwebtoken"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/signin-rs"
readme = "README.md"
keywords = ["google", "jwt", "sign", "token", "android", "apple", "ios", "mac"]
repository = "https://github.com/normano/signin-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "^0.13.0", optional = true }
jsonwebtoken = "^8"
headers = "^0.3.1"
hyper = { version = "^0.14", features = ["http1"] }
hyper-tls = "^0.5"
httpmock = { version = "^0.6.2", optional = true }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1"
tokio = { version = "^1.0", features = ["rt-multi-thread", "net", "macros"] }

[dev-dependencies]
base64 = { version = "0.13.0" }
httpmock = { version = "0.6.2" }
rsa = "^0.5.0"
rand = "^0.8.5"
rustls = { version = "^0.20.2" }

[features]
test-helper = ["httpmock", "base64"]
