[package]
name = "id_token_parser"
version = "0.2.0"
authors = ["Norm O <normo.pub@gmail.com>"]
edition = "2021"
description = "Parse and validate third party jwt token with jsonwebtoken"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/signin-rs"
readme = "README.md"
keywords = ["google", "apple", "jwt", "webtoken",]
repository = "https://github.com/normano/id_token_parser"

[dependencies]
base64 = { version = "^0" }
jsonwebtoken = "^8"
headers = "^0"
httpmock = { version = "^0" }
reqwest = { version = "^0", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "^1"
tracing = "^0.1"
tokio = { version = "^1", features = ["rt-multi-thread", "net", "macros"] }

[dev-dependencies]
base64 = { version = "^0" }
httpmock = { version = "^0"}
once_cell = "^1"
rsa = "=0.10.0-rc.1"
rand = "^0.9"
rustls = { version = "^0" }
serial_test = "^3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }