[package]
name = "id_token_parser"
version = "0.2.5"
authors = ["Norm O <normo.pub@gmail.com>"]
edition = "2024"
description = "Parse and validate third party jwt token with jsonwebtoken"
license = "MPL-2.0"
documentation = "https://docs.rs/id_token_parser"
readme = "README.md"
keywords = ["google", "apple", "jwt", "webtoken",]
repository = "https://github.com/normano/id_token_parser"

[dependencies]
base64 = { version = "0.22" }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
headers = "0.4"
httpmock = { version = "0.8" }
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }

[dev-dependencies]
base64 = { version = "0" }
httpmock = { version = "0"}
once_cell = "^1"
rsa = "=0.10.0-rc.10"
rand = { version = "=0.10.0-rc.1", features = ["os_rng"] }
rustls = { version = "0" }
serial_test = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }